vote and flag updating golos force, footer show number off payed golos, fix header elements visibility, update style for content, Post Index and etc #654

--- a/app/components/pages/PostsIndex.scss
+++ b/app/components/pages/PostsIndex.scss
@@ -1,5 +1,6 @@
 .PostsList {
   clear: right;
+  margin: 20px 0;
 }
 
 .PostsList__summaries {
